# framelog

./: .gitignore  .mailmap  CLAUDE.md  Makefile  README.md  config.py  db.py  exif.py  git.py  ingest.py  main.py  menubar.py  outgest.py  pyproject.toml  setup.py  watcher.py  xmp.py
.github/workflows/: ci.yml  release.yml
core/: Makefile  core.go  go.mod  go.sum  integration_test.go
core/backup/: backup.go  backup_test.go
core/config/: config.go  userconfig.go
core/db/: db.go  db_test.go
core/exif/: exif.go  exif_test.go
core/gitops/: gitops.go  gitops_test.go
core/hasher/: hasher.go  hasher_test.go
core/ingest/: ingest.go  ingest_invariants_test.go  ingest_test.go
core/ipc/: ipc.go  ipc_test.go
core/launchd/: launchd.go  launchd_test.go
core/logging/: logging.go  logging_test.go
core/outgest/: outgest.go  outgest_invariants_test.go  outgest_test.go
core/outgestwatcher/: outgestwatcher.go  outgestwatcher_test.go
core/sdcard/: sdcard.go  sdcard_test.go
core/triggerwatcher/: triggerwatcher.go  triggerwatcher_test.go
core/xmp/: xmp.go  xmp_test.go
core/xmpwatcher/: xmpwatcher.go  xmpwatcher_invariants_test.go  xmpwatcher_test.go
docs/: PHASE5_RUNBOOK.md  PROTOCOL.md  RELEASE_RUNBOOK.md  ROADMAP.md
launchd/: com.framelog.app.plist  com.framelog.menubar.plist  com.framelog.outgest.plist  com.framelog.sdcard.plist  com.framelog.watcher.plist
scripts/: on_sd_mount.sh
src/framelog/: __main__.py  (+10 more)
tests/: test_db.py  test_exif.py  test_firstrun.py  test_git.py  test_hasher.py  test_ingest.py  test_outgest.py  test_watchdog.py  test_xmp.py
(+19 files in other folders)
