[project]
name = "framelog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "psutil>=7.2.2",
    "rumps>=0.4.0",
    "watchdog>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.briefcase]
project_name = "Framelog"
bundle = "com.framelog"
version = "1.0.0"
license = {text = "Proprietary"}

[tool.briefcase.app.framelog]
formal_name = "Framelog"
description = "Automatic photo import, deduplication, XMP versioning, and Lightroom sync pipeline for Mac."
icon = "assets/framelog"
sources = ["src/framelog"]
requires = [
    "rumps>=0.4.0",
    "psutil>=7.2.2",
    "watchdog>=6.0.0",
]

[tool.briefcase.app.framelog.macOS]
universal_build = false
python_version = "3.12"

[dependency-groups]
dev = [
    "briefcase>=0.4.2",
    "py2app>=0.28.10",
    "pytest>=9.0.3",
]
